projects/vb6parse/snapshots/tests/library/interaction/doevents/doevents_multi_step.snap
---
source: projects/vb6parse/tests/library/interaction/doevents.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: MemberAccessExpression
          children:
            - kind: Identifier
              text: lblStatus
            - kind: PeriodOperator
              text: "."
            - kind: Identifier
              text: Caption
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: StringLiteralExpression
          children:
            - kind: StringLiteral
              text: "\"Step 1\""
        - kind: Newline
          text: "\n"
    - kind: CallStatement
      children:
        - kind: Identifier
          text: DoEvents
        - kind: Newline
          text: "\n"
    - kind: CallStatement
      children:
        - kind: Identifier
          text: LoadData
        - kind: Newline
          text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: MemberAccessExpression
          children:
            - kind: Identifier
              text: lblStatus
            - kind: PeriodOperator
              text: "."
            - kind: Identifier
              text: Caption
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: StringLiteralExpression
          children:
            - kind: StringLiteral
              text: "\"Step 2\""
        - kind: Newline
          text: "\n"
    - kind: CallStatement
      children:
        - kind: Identifier
          text: DoEvents
        - kind: Newline
          text: "\n"
    - kind: CallStatement
      children:
        - kind: Identifier
          text: ProcessData
        - kind: Newline
          text: "\n"
